--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,7 +69,7 @@ jobs:
 
     - name: Build release artifacts
       uses: actions/upload-artifact@v4
-      if: ${{ github.event_name != 'workflow_dispatch' }}
+      #if: ${{ github.event_name != 'workflow_dispatch' }}
       with:
         name: rpcs3-build
         path: |
